spotify factory => spotifysearch factory, collapsed some app declarations

--- a/assets/partials/menu.html
+++ b/assets/partials/menu.html
@@ -1,4 +1,4 @@
-<ul id="nav-mobile" class="green darken-3 right hide-on-med-and-down"> 
+<ul id="nav-mobile" class="green darken-3 right hide-on-small"> 
     <li ng-repeat="(name, link) in menu">
         <a href="{{link}}">{{name}}</a>
     </li>
