--- a/assets/partials/menu.html
+++ b/assets/partials/menu.html
@@ -1,11 +1,8 @@
-<ul id="nav-mobile" class="green darken-3 right hide-on-small">
+<ul id="nav-mobile" class="grey darken-3 right hide-on-small">
     <li ng-repeat="item in menu">
         {{item}}
     </li>
     <li ng-show="login">
         <a href="https://accounts.spotify.com/authorize?client_id={{key}}&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2F&scope=user-top-read%20user-read-currently-playing&response_type=token">Login</a>
-    </li>
-    <li ng-show="logout">
-        <a ng-click="logOut()">Logout</a>
     </li>
 </ul>
