--- a/assets/partials/user.html
+++ b/assets/partials/user.html
@@ -1,1 +1,7 @@
-<h5>{{user.display_name}}</h5>
+<div class="user-card" ng-show="user">
+    <img src="{{user.images[0].url}}">
+    <div class="body">
+        <h5>{{user.display_name ? user.display_name : user.id}}</h5>
+        <a href="#" ng-click="logout()" class="button">Logout</a>
+    </div>
+</div>
