moved structure with user sidebar into partial

--- a/assets/partials/home.html
+++ b/assets/partials/home.html
@@ -1,1 +1,10 @@
-homepage
+<div class="row">
+    <div class="col s6 m8 l9">
+        <div>
+            Homepage
+        </div>
+    </div>
+    <div class="col s6 m4 l3" id="sidebar">
+        <div id="user" ng-include="'/assets/partials/user.html'" ng-controller="SpotifyUserCtrl"></div>
+    </div>
+</div>
