--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,9 +1,12 @@
-$g1: #303030;
-$g2: #424242;
-$g3: #545454;
+$g1: #333;
+$g2: #444;
+$g3: #666;
+$g4: #999;
 
-$w1: #eee;
-$w2: #ccc;
+$w1: #fff;
+$w2: #eee;
+$w3: #ccc;
+$w4: #aaa;
 
 body {
     background: $g1;
@@ -45,10 +48,21 @@ nav {
         padding: 0;
     }
     .body {
-        padding: .25rem .75rem;
-        flex-grow: 3;
-        h3 {
-            font-weight: 100;
+        padding: .25rem 1rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        h5 {
+            margin-top: .25em;
+            font-weight: 300;
+            color: $w1;
+        }
+        a.button {
+            display: inline-block;
+            background: $g4;
+            color: $w2;
+            padding: .25em .75em;
         }
     }
 }
