--- a/assets/partials/profile.html
+++ b/assets/partials/profile.html
@@ -1,1 +1,11 @@
-profile: {{user.display_name ? user.display_name : user.id}}
+<div class="row container">
+    <div class="col s6 m8 l9">
+    </div>
+    <div class="col s6 m4 l3" id="sidebar">
+        <img src="{{user.images[0].url}}">
+        <h2>
+            {{user.display_name ? user.display_name : user.id}}
+            <span class="kb-badge">{{user.followers.total}}</span>
+        </h2>
+    </div>
+</div>
