--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -8,12 +8,31 @@ $w2: #eee;
 $w3: #ccc;
 $w4: #aaa;
 
+$green: #00a849;
+$green-hl: #00E560;
+
 body {
     background: $g1;
     color: $w2;
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+}
+
+img {
+    max-width: 100%;
+}
+
+h2 {
+    font-size: 1.75rem;
+    font-weight: 300;
+    color: $w2;
+}
+h3 {
+    text-transform: uppercase;
+    color: $g3;
+    font-weight: bold;
+    font-size: 1.5rem;
 }
 
 main {
@@ -23,7 +42,23 @@ main {
         height: 100%;
     }
 }
-      
+.kb-badge {
+    background: $green;
+    width: 2.3em;
+    text-align: center;
+    height: 2.3em;
+    line-height: 1.4em;
+    display: inline-block;
+    font-size: .65em;
+    padding: .5em;
+    font-weight: 400;
+    margin-bottom: .25em;
+    box-sizing: border-box;
+    border-radius: 50%;
+    vertical-align: middle;
+    margin-left: .5em;
+}
+
 i.material-icons {
     &.md-36 {
         font-size: 36px !important;
@@ -57,6 +92,9 @@ nav {
             margin-top: .25em;
             font-weight: 300;
             color: $w1;
+            a {
+                color: inherit;
+            }
         }
         a.button {
             display: inline-block;
@@ -74,9 +112,4 @@ nav {
 #movies, #tv {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    .media {
-        img {
-            max-width: 100%;
-        }
-    }
 }
