--- a/assets/partials/profile.html
+++ b/assets/partials/profile.html
@@ -1,5 +1,8 @@
 <div class="row container">
-    <div class="col s6 m8 l9">
+    <div class="col s6 m8 l9" id="profile-links">
+        <div id="{{key}}" ng-repeat="(key, val) in links" class="link">
+            {{val}}
+        </div>
     </div>
     <div class="col s6 m4 l3" id="sidebar">
         <img src="{{user.images[0].url}}">
