--- a/assets/partials/profile.html
+++ b/assets/partials/profile.html
@@ -1,14 +1,22 @@
 <div class="row container">
-    <div class="col s6 m8 l9" id="profile-links">
-        <div id="{{key}}" ng-repeat="(key, val) in links" class="link">
-            {{val}}
-        </div>
-    </div>
-    <div class="col s6 m4 l3" id="sidebar">
+    <div class="col s12 m4 l3 offset-l1" id="sidebar">
         <img src="{{user.images[0].url}}">
         <h2>
             {{user.display_name ? user.display_name : user.id}}
             <span class="kb-badge">{{user.followers.total}}</span>
         </h2>
+    </div>
+    <div class="col s12 m8 l6 offset-l1" id="profile-links">
+        <div id="{{key}}" ng-repeat="(key, val) in links" class="link">
+            <img src="{{val[1].music.album_cover}}">
+            <div class="body">
+                <h5>{{val[1].music.title}}</h5>
+                <h6>{{val[1].music.artist}}</h6>
+                <div class="tags">
+                    <span class="tag">{{val[1].media.title}}</span>
+                    <span class="tag" ng-repeat="tag in val[1].tags">{{tag}}</span>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
