--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -157,6 +157,9 @@ nav {
                     margin-right: .75em;
                     display: inline-block;
                 }
+                a {
+                    color: inherit;
+                }
             }
         }
     }
