--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -69,7 +69,8 @@ i.material-icons {
 }
 nav {
     .brand-logo {
-        padding: 0 1rem;
+        padding: 0 2.5rem;
+        font-weight: 100;
     }
 }
 #sidebar {
