tv page, linked from home and tags; tags are now a dynamic partial with context

--- a/assets/partials/home.html
+++ b/assets/partials/home.html
@@ -3,7 +3,9 @@
         <h3>TV shows</h3>
         <div id="tv">
             <div ng-repeat="show in tvShows" class="tv media">
-                <img ng-src="{{tmdbPrefix}}{{show.image}}">
+                <a ng-href="#!/tv/{{show.id}}">
+                    <img ng-src="{{tmdbPrefix}}{{show.image}}">
+                </a>
             </div>
         </div>
         <h3>Movies</h3>
