--- a/assets/partials/profile.html
+++ b/assets/partials/profile.html
@@ -6,18 +6,6 @@
             <span class="kb-badge">{{user.followers.total}}</span>
         </h1>
     </div>
-    <div class="col s12 m8 l6 offset-l1" id="profile-links">
-        <h3>Activity</h3>
-        <div id="{{key}}" ng-repeat="(key, val) in links" class="link">
-            <img ng-src="{{val[1].music.album_cover}}">
-            <div class="body">
-                <h5>{{val[1].music.title}}</h5>
-                <h6>{{val[1].music.artist}}</h6>
-                <div class="tags">
-                    <a ng-href="#!/{{val[1].media.type}}/{{val[1].media.id}}" class="tag">{{val[1].media.title}}</a>
-                    <span class="tag" ng-repeat="tag in val[1].tags">{{tag}}</span>
-                </div>
-            </div>
-        </div>
+    <div class="col s12 m8 l6 offset-l1" id="profile-links" ng-include="'assets/partials/profileLinks.html'">
     </div>
 </div>
