--- a/assets/partials/menu.html
+++ b/assets/partials/menu.html
@@ -3,7 +3,7 @@
         <a ng-href="{{item.url}}">{{item.label}}</a>
     </li>
     <li ng-show="!token">
-        <a href="https://accounts.spotify.com/authorize?client_id={{key}}&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2F&scope=user-top-read%20user-read-currently-playing&response_type=token">Login</a>
+        <a ng-href="https://accounts.spotify.com/authorize?client_id={{key}}&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2F&scope=user-top-read%20user-read-currently-playing&response_type=token">Login</a>
     </li>
     <li ng-show="token">
         <a ng-click="logout()">Logout</a>
