--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -168,3 +168,20 @@ nav {
         }
     }
 }
+#media-choices {
+    display: flex;
+    justify-content: center;
+    a {
+        .material-icons {
+            color: $g3;
+            cursor: pointer;
+            font-size: 2.5rem;
+            margin: 0 1rem;
+        }
+        &.active {
+            .material-icons {
+                color: $green;
+            }
+        }
+    }
+}
