--- a/assets/partials/newLink.html
+++ b/assets/partials/newLink.html
@@ -4,7 +4,7 @@
             <input ng-model="mediaSearchTerm" type="text">
             <label for="mediaSearchTerm">Search media</label>
         </div>
-        <div id="media-choices" ng-init="active=false">
+        <div id="media-choices" ng-init="active=false" ng-click="results=[]">
             <a ng-click="active='books'" ng-class="{'active': active=='books'}">
                 <i class="material-icons">chrome_reader_mode</i>
             </a>
@@ -17,20 +17,35 @@
             <a class="button" ng-click="search()" ng-class="{'disabled': !active || !mediaSearchTerm}">Search</a>
         </div>
         <div id="searchResults">
-            <div ng-show="active=='books'" class="search-result books" ng-repeat="result in results">
+            <div id="{{result.best_book.id._text}}" ng-show="active=='books'" class="search-result books" ng-repeat="result in results">
                 <img ng-src="{{result.best_book.image_url._text}}">
-                <h4>{{result.best_book.title._text}}</h4>
-                <h5>{{result.best_book.author.name._text}}</h5>
+                <div class="body">
+                    <h5>{{result.best_book.title._text}}</h5>
+                    <h6>{{result.best_book.author.name._text}}</h6>
+                </div>
+                <a ng-click="selectMedia(result.best_book.id._text)">
+                    <i class="material-icons">add_circle_outline</i>
+                </a>
             </div>
-            <div ng-show="active=='movies'" class="search-result movies" ng-repeat="result in results">
+            <div id="{{result.id}}" ng-show="active=='movies'" class="search-result movies" ng-repeat="result in results">
                 <img ng-src="{{image_prefix}}{{result.poster_path}}">
-                <h4>{{result.title}}</h4>
-                <h5>{{result.release_date.slice(0,4)}}</h5>
+                <div class="body">
+                    <h5>{{result.title}}</h5>
+                    <h6>{{result.release_date.slice(0,4)}}</h6>
+                </div>
+                <a ng-click="selectMedia(result.id)">
+                    <i class="material-icons">add_circle_outline</i>
+                </a>
             </div>
             <div id="{{result.id}}" ng-show="active=='tv'" class="search-result tv" ng-repeat="result in results">
                 <img ng-src="{{image_prefix}}{{result.poster_path}}">
-                <h4>{{result.name}}</h4>
-                <h5>{{result.first_air_date.slice(0,4)}}</h5>
+                <div class="body">
+                    <h5>{{result.name}}</h5>
+                    <h6>{{result.first_air_date.slice(0,4)}}</h6>
+                </div>
+                <a ng-click="selectMedia(result.id)">
+                    <i class="material-icons">add_circle_outline</i>
+                </a>
             </div>
         </div>
     </div>
