--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -137,11 +137,11 @@ nav {
     grid-template-columns: repeat(5, 1fr);
 }
 
-#profile-links {
-    .link {
+#profile-links, #searchResults {
+    .link, .search-result {
         display: grid;
         margin-bottom: 1em;
-        grid-template-columns: 7rem 1fr;
+        grid-template-columns: fit-content(7rem) 1fr 3rem;
         background: $g3;
         img {
             height: 100%;
@@ -159,6 +159,7 @@ nav {
             }
             h6 {
                 color: $w3;
+                margin-bottom: 0;
             }
             .tags {
                 margin-top: .5em;
@@ -194,6 +195,23 @@ nav {
             .material-icons {
                 color: $green;
             }
+        }
+    }
+}
+#searchResults {
+    padding-top: 1rem;
+    .search-result {
+        grid-template-columns: fit-content(4.5rem) 1fr 3rem;
+        > a {
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-content: center;
+            background: $green;
+            align-self: stretch;
+            color: $w1;
+            cursor: pointer;
         }
     }
 }
