--- a/assets/partials/movie.html
+++ b/assets/partials/movie.html
@@ -1,10 +1,8 @@
 <div class="row container">
     <div class="col s12 m4 l5" id="sidebar">
-        <img ng-src="{{movie.poster_path}}">
-        <h1>
-            {{movie.title}}
-        </h1>
-        <h2>{{movie.year}}</h2>
+        <img ng-src="{{movie.image}}">
+        <h1>{{movie.title}}</h1>
+        <h2>{{movie.subtitle}}</h2>
     </div>
     <div class="col s12 m8 l6 offset-l1" id="profile-links" ng-include="'assets/partials/profileLinks.html'">
     </div>
