--- a/assets/partials/profileLinks.html
+++ b/assets/partials/profileLinks.html
@@ -1,9 +1,9 @@
 <h3>Activity</h3>
 <div id="{{key}}" ng-repeat="(key, val) in links" class="link">
-    <img ng-src="{{val[1].music.album_cover}}">
+    <img ng-src="{{val[1].music.image}}">
     <div class="body">
         <h5>{{val[1].music.title}}</h5>
-        <h6>{{val[1].music.artist}}</h6>
+        <h6>{{val[1].music.subtitle}}</h6>
         <div class="tags">
             <span class="tag" ng-repeat="tag in val[1].tags">{{tag}}</span>
             <a ng-href="#!/{{val[1].media.type}}/{{val[1].media.id}}" ng-show="context!='media'" class="tag">{{val[1].media.title}}</a>
