--- a/assets/partials/tvShow.html
+++ b/assets/partials/tvShow.html
@@ -1,8 +1,8 @@
 <div class="row container">
     <div class="col s12 m4 l5" id="sidebar">
-        <img ng-src="{{show.poster_path}}">
-        <h1>{{show.name}}</h1>
-        <h2>{{show.year}}</h2>
+        <img ng-src="{{show.image}}">
+        <h1>{{show.title}}</h1>
+        <h2>{{show.subtitle}}</h2>
     </div>
     <div class="col s12 m8 l6 offset-l1" id="profile-links" ng-include="'assets/partials/profileLinks.html'">
     </div>
