--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -42,6 +42,9 @@ main {
         height: 100%;
     }
 }
+.big {
+    font-size: 1.2em;
+}
 a.button {
     display: inline-block;
     background: $green;
@@ -198,7 +201,7 @@ nav {
         }
     }
 }
-#mediaSearchResults, #musicSearchResults, #selectedMusic, #selectedMedia {
+#mediaSearchResults, #musicSearchResults {
     padding-top: 1rem;
     .search-result {
         > a {
@@ -219,8 +222,30 @@ nav {
         grid-template-columns: fit-content(4.5rem) 1fr 3rem;
     }
 }
-#selectedMedia {
+#selectedMedia, #selectedMusic {
+    padding-top: 2rem;
     img {
-        width: 100%;
+        max-height: 13rem;
+        margin: auto;
+        display: block;
+    }
+    h1 {
+        font-size: 1.8rem;
+        margin-bottom: 1rem;
+    }
+    h2 {
+        color: $w3;
+        font-size: 1.5rem;
+        margin-top: 0;
+    }
+}
+#newMix {
+    #submit {
+        a {
+            display: block;
+            width: 10rem;
+            margin: 1rem auto;
+            text-align: center;
+        }
     }
 }
