movies and tv now displaying neatly

--- a/assets/partials/home.html
+++ b/assets/partials/home.html
@@ -10,16 +10,14 @@
         <h3>Movies</h3>
         <div id="movies">
             <div ng-repeat="movie in movies" class="movie media">
-                <a ng-href="#!/movie/{{movie.id}}">
-                    <img ng-src="{{movie.small_image}}">
+                <a ng-href="#!/movie/{{movie.id}}" style="background-image: url({{movie.small_image}});">
                 </a>
             </div>
         </div>
         <h3>TV shows</h3>
         <div id="tv">
             <div ng-repeat="show in tvShows" class="tv media">
-                <a ng-href="#!/tv/{{show.id}}">
-                    <img ng-src="{{show.small_image}}">
+                <a ng-href="#!/tv/{{show.id}}" style="background-image: url({{show.small_image}});">
                 </a>
             </div>
         </div>
