--- a/assets/partials/newLink.html
+++ b/assets/partials/newLink.html
@@ -92,7 +92,7 @@
             <label for="tags">Add tags separated by commas</label>
         </div>
         <div class="tags">
-            <div class="tag" ng-repeat="tag in commaSplit(tags)">
+            <div class="tag" ng-repeat="tag in tags.trim().split(',')">
                 {{tag}}
             </div>
         </div>
