--- a/assets/partials/profileLinks.html
+++ b/assets/partials/profileLinks.html
@@ -1,6 +1,6 @@
 <h3>Activity</h3>
 <div id="{{key}}" ng-repeat="(key, val) in links" class="link">
-    <img ng-src="{{val[1].music.image}}">
+    <img ng-src="{{val[1].music.small_image}}">
     <div class="body">
         <h5>{{val[1].music.title}}</h5>
         <h6>{{val[1].music.subtitle}}</h6>
