combined book, movie, tv partials into one

--- a/assets/partials/media.html
+++ b/assets/partials/media.html
@@ -1,8 +1,8 @@
 <div class="row container">
     <div class="col s12 m4 l5" id="sidebar">
-        <img ng-src="{{book.image}}">
-        <h1>{{book.title}}</h1>
-        <h2>{{book.subtitle}}</h2>
+        <img ng-src="{{media.image}}">
+        <h1>{{media.title}}</h1>
+        <h2>{{media.subtitle}}</h2>
     </div>
     <div class="col s12 m8 l6 offset-l1" id="profile-links" ng-include="'assets/partials/profileLinks.html'">
     </div>
