song details load

--- a/assets/partials/profileLinks.html
+++ b/assets/partials/profileLinks.html
@@ -1,5 +1,5 @@
 <h3>Activity</h3>
-<div id="{{key}}" ng-repeat="(key, val) in links" class="link">
+<div id="{{val[1].music.id}}" ng-repeat="(key, val) in links" class="link">
     <img ng-src="{{val[1].music.small_image}}">
     <div class="body">
         <h5>{{val[1].music.title}}</h5>
