--- a/assets/partials/profileLinks.html
+++ b/assets/partials/profileLinks.html
@@ -2,7 +2,7 @@
 <div id="{{val[1].music.id}}" ng-repeat="(key, val) in links" class="link">
     <img ng-src="{{val[1].music.small_image}}">
     <div class="body">
-        <h5>{{val[1].music.title}}</h5>
+        <h5><a ng-href="#!/track/{{val[1].music.id}}">{{val[1].music.title}}</a></h5>
         <h6>{{val[1].music.subtitle}}</h6>
         <div class="tags">
             <span class="tag" ng-repeat="tag in val[1].tags">{{tag}}</span>
