--- a/assets/partials/trackLinks.html
+++ b/assets/partials/trackLinks.html
@@ -2,7 +2,7 @@
 <div id="{{val[1].media.id}}" ng-repeat="(key, val) in links" class="link">
     <img ng-src="{{val[1].media.small_image}}">
     <div class="body">
-        <h5>{{val[1].media.title}}</h5>
+        <h5><a ng-href="#!/{{val[1].media.type}}/{{val[1].media.id}}">{{val[1].media.title}}</a></h5>
         <h6>{{val[1].media.subtitle}}</h6>
         <div class="tags">
             <span class="tag" ng-repeat="tag in val[1].tags">{{tag}}</span>
